<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding16"
    android:paddingTop="@dimen/padding16"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/textViewTransactionID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_id_transaction_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTransactionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_id_transaction_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTransactionID" />

    <TextView
        android:id="@+id/textViewTitleValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_id_value_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTransactionValue" />

    <TextView
        android:id="@+id/textViewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/value"
        android:textColor="@color/black"
        android:textSize="@dimen/size_text_24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleValue" />

    <TextView
        android:id="@+id/textViewTitleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_name_sender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValue" />

    <TextView
        android:id="@+id/textViewNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleName" />

    <TextView
        android:id="@+id/textViewTitleCPF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_cpf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameValue" />

    <TextView
        android:id="@+id/textViewCpfValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cpf_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleCPF" />

    <TextView
        android:id="@+id/textViewTitleInstitucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_institucion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCpfValue" />

    <TextView
        android:id="@+id/textViewInstitucionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_institucion_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleInstitucion" />

    <TextView
        android:id="@+id/textViewTitleAgency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/title_agency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstitucionValue" />

    <TextView
        android:id="@+id/textViewAgencyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/text_agency_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleAgency" />

    <TextView
        android:id="@+id/textViewTitleAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:text="@string/title_account"
        app:layout_constraintStart_toEndOf="@+id/textViewTitleAgency"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstitucionValue" />

    <TextView
        android:id="@+id/textViewAccountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_account_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textViewTitleAgency"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleAccount" />

    <View
        android:id="@+id/dividerProof"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccountValue" />

</androidx.constraintlayout.widget.ConstraintLayout>
