<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding16"
    android:paddingTop="@dimen/padding16"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/textViewTitleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_name_destiny"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleName" />

    <TextView
        android:id="@+id/textViewTitleCPF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_cpf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameValue" />

    <TextView
        android:id="@+id/textViewCpfValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cpf_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleCPF" />

    <TextView
        android:id="@+id/textViewTitleInstitucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_institucion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCpfValue" />

    <TextView
        android:id="@+id/textViewInstitucionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_institucion_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleInstitucion" />

    <TextView
        android:id="@+id/textViewTitleKeyPix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/title_key_pix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstitucionValue" />

    <TextView
        android:id="@+id/textViewKeyPixValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/text_key_pix_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleKeyPix" />

    <View
        android:id="@+id/dividerProof"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/row_view_divider"
        android:layerType="software"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKeyPixValue" />

</androidx.constraintlayout.widget.ConstraintLayout>
