<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding20"
    android:paddingTop="@dimen/padding16">

    <TextView
        android:id="@+id/textViewTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_type_transaction"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDateTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_date_transaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTransaction" />

    <ImageView
        android:id="@+id/imageViewIti"
        android:layout_width="@dimen/height_logo_iti_70"
        android:layout_height="@dimen/height_logo_iti_70"
        android:contentDescription="@string/description_image_logo_iti"
        android:src="@drawable/logo_iti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewDateTransaction"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerProof"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIti" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>